--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-awesome/components": "^1.0.24",
     "@tailwindcss/vite": "^4.1.10",
+    "@tanstack/react-query": "^5.81.2",
     "aos": "^2.3.4",
     "axios": "^1.10.0",
     "firebase": "^11.9.1",
